remove produced data
Remove produced data (per cleanup.sh), update instructions, add these
data files to the .gitignore so that they aren't added back.

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,9 @@
 .DS_Store
+sheets
+data/analyses
+data/authors
+data/detail_pages
+data/analyses.html
+data/annotes.html
+data/sheet1.json
+data/sheet2.json
